# file-hasher

./: .gitignore  README.md  dev-requirements.txt  setup.cfg
.github/workflows/: pythonapp.yml
file_hasher/: file_hasher.py  parse_arguments.py
file_hasher/actions/: memory.py
file_hasher/tests/: test_dir_scanner.py
file_hasher/tests/actions/: test_memory.py
file_hasher/tests/file_hash_algorithms/: test_md5.py
hasher/: .pylintrc  action.py  dir_scanner.py  file_hash_algorithm.py  hasher.py  parse_arguments.py
hasher/actions/: memory.py
hasher/file_hash_algorithms/: md5.py
hasher/tests/: test_dir_scanner.py
hasher/tests/actions/: test_memory.py
hasher/tests/file_hash_algorithms/: test_md5.py
src/file_hasher/: dir_scanner.py  file_hasher.py  parse_arguments.py
src/file_hasher/file_hash_algorithms/: md5.py
src/file_hasher/tests/actions/: test_memory.py
src/file_hasher/tests/file_hash_algorithms/: test_md5.py
