[metadata]
name = file_hasher
version = 0.3.1
author = Åukasz Bacik
author-email = mail@luka.sh
license = GPLv2
url = https://github.com/lbacik/file-hasher
requires-python = >=3.7
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages =
    file_hasher
    file_hasher.actions
    file_hasher.file_hash_algorithms

[options.entry_points]
console_scripts =
    file-hasher = file_hasher.file_hasher:main